# PIAIC-Q3_Backend_Database_learnings

FastAPI-GenAI/: Notes.txt
FastAPI-GenAI/PIAIC-Q3/class01-GenerativeAIWithLangChainAndOpenAI/: Notes.txt
FastAPI-GenAI/fastapi-genai-01-master/todos/: main.py
FastAPI-GenAI/fastapi-genai-01-master/todos/models/: todos.py
FastAPI-GenAI/hello-fastapi/: README.md  pyproject.toml
FastAPI-GenAI/hello-fastapi/todos/: main.py  pythonTypes.py  queryPathBody.py  sqlModel.py
FastAPI-GenAI/hello-fastapi/todos/config/: db.py
FastAPI-GenAI/hello-fastapi/todos/models/: tdoos.py
python/: example.txt  generateText.py  pythonAllBasicsNotes.py
